# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
#

2004-04-27 21:11:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-6

    Summary:
      First go at default stuff
    Revision:
      missinglib--head--0.0--patch-6


    modified files:
     ChangeLog libsrc/configParser/configParser.ml


2004-04-27 14:41:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-5

    Summary:
      Initial add of interpolation functions
    Revision:
      missinglib--head--0.0--patch-5


    new files:
     libsrc/configParser/configParser_interp.ml

    modified files:
     ChangeLog libsrc/Makefile
     libsrc/configParser/configParser_interp_lexer.mll


2004-04-27 13:25:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-4

    Summary:
      First draft of configparser interpolation lexer
    Revision:
      missinglib--head--0.0--patch-4


    new files:
     libsrc/configParser/configParser_interp_lexer.mll

    modified files:
     ChangeLog


2004-04-23 18:36:10 GMT	John Goerzen <jgoerzen@complete.org>	patch-3

    Summary:
      Fixed debian/rules typo
    Revision:
      missinglib--head--0.0--patch-3


    modified files:
     ChangeLog debian/rules


2004-04-23 18:35:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-2

    Summary:
      Made final adjustments before first build
    Revision:
      missinglib--head--0.0--patch-2


    modified files:
     ChangeLog README debian/control debian/docs debian/rules


2004-04-23 18:31:53 GMT	John Goerzen <jgoerzen@complete.org>	patch-1

    Summary:
      Added tla ChangeLog file
    Revision:
      missinglib--head--0.0--patch-1


    new files:
     ChangeLog


2004-04-23 18:20:17 GMT	John Goerzen <jgoerzen@complete.org>	base-0

    Summary:
      tag of jgoerzen@complete.org--ocaml/ocaml-jglib--head--1.0--patch-57
    Revision:
      missinglib--head--0.0--base-0

    (automatically generated log message)

    new patches: