@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
 #
 
+2004-04-27 21:45:04 GMT	John Goerzen <jgoerzen@complete.org>	patch-7
+
+    Summary:
+      Further experimentation
+    Revision:
+      missinglib--head--0.0--patch-7
+
+
+    modified files:
+     ChangeLog libsrc/configParser/configParser.ml
+
+
 2004-04-27 21:11:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-6
 
     Summary:
